tests/tooling/fixtures/native/recovery/negative/negative_prototype_parser_missing_rparen.objc3
// Expected diagnostic code(s): O3P109.
module NegativePrototypeParserMissingRParen;

fn add(lhs: i32, rhs: i32 -> i32;
fn main() -> i32 {
  return 0;
}
